--- a/contact.html
+++ b/contact.html
@@ -246,7 +246,7 @@
         <div class="contact-info-box" style="text-align: center; padding: 30px 20px; background: #fff; border-radius: 8px; box-shadow: 0 2px 15px rgba(0,0,0,0.1);">
           <i class="fa fa-phone fa-2x" style="color: #e74c3c; margin-bottom: 15px;"></i>
           <h3>Phone</h3>
-          <p>Office: <a href="tel:YOUR-PHONE">YOUR-PHONE</a><br>
+          <p>Office: <a href="tel:813-719-1203">813-719-1203</a><br>
              Emergency: <a href="tel:YOUR-EMERGENCY">YOUR-EMERGENCY</a></p>
         </div>
       </div>
@@ -256,7 +256,7 @@
         <div class="contact-info-box" style="text-align: center; padding: 30px 20px; background: #fff; border-radius: 8px; box-shadow: 0 2px 15px rgba(0,0,0,0.1);">
           <i class="fa fa-envelope fa-2x" style="color: #e74c3c; margin-bottom: 15px;"></i>
           <h3>Email Us</h3>
-          <p><a href="mailto:info@cookconstructionco.com">info@cookconstructionco.com</a></p>
+          <p><a href="mailto:design@cookcoinc.com">design@cookcoinc.com</a></p>
         </div>
       </div>
     </div>
@@ -397,11 +397,11 @@
                 </li>
                 <li>
                   <i class="fa fa-phone"></i>
-                  <span>Call Us: <a href="tel:YOUR-PHONE" style="color: inherit;">YOUR-PHONE</a></span>
+                  <span>Call Us: <a href="tel:813-719-1203" style="color: inherit;">813-719-1203</a></span>
                 </li>
                 <li>
                   <i class="fa fa-envelope-o"></i>
-                  <span>Email: <a href="mailto:info@cookconstructionco.com" style="color: inherit;">info@cookconstructionco.com</a></span>
+                  <span>Email: <a href="mailto:design@cookcoinc.com" style="color: inherit;">design@cookcoinc.com</a></span>
                 </li>
                 <li>
                   <i class="fa fa-clock-o"></i>
