--- a/index.html
+++ b/index.html
@@ -761,11 +761,11 @@
                 </li>
                 <li>
                   <i class="fa fa-phone"></i>
-                  <span>Call Us: <a href="tel:YOUR-PHONE" style="color: inherit;">YOUR-PHONE</a></span>
+                  <span>Call Us: <a href="tel:813-719-1203" style="color: inherit;">813-719-1203</a></span>
                 </li>
                 <li>
                   <i class="fa fa-envelope-o"></i>
-                  <span>Email: <a href="mailto:info@cookconstructionco.com" style="color: inherit;">info@cookconstructionco.com</a></span>
+                  <span>Email: <a href="mailto:design@cookcoinc.com" style="color: inherit;">design@cookcoinc.com</a></span>
                 </li>
                 <li>
                   <i class="fa fa-clock-o"></i>
