--- a/about.html
+++ b/about.html
@@ -331,7 +331,7 @@
           <p style="margin-bottom: 10px;">Need immediate assistance?</p>
           <h3 style="color: white; margin: 0;">
             <i class="fa fa-phone" style="color: #e74c3c;"></i> 
-            Call us at: <a href="tel:YOUR-PHONE" style="color: #e74c3c;">YOUR-PHONE</a>
+            Call us at: <a href="tel:813-719-1203" style="color: #e74c3c;">813-719-1203</a>
           </h3>
         </div>
       </div>
@@ -451,11 +451,11 @@
                 </li>
                 <li>
                   <i class="fa fa-phone"></i>
-                  <span>Call Us: <a href="tel:YOUR-PHONE" style="color: inherit;">YOUR-PHONE</a></span>
+                  <span>Call Us: <a href="tel:813-719-1203" style="color: inherit;">813-719-1203</a></span>
                 </li>
                 <li>
                   <i class="fa fa-envelope-o"></i>
-                  <span>Email: <a href="mailto:info@cookconstructionco.com" style="color: inherit;">info@cookconstructionco.com</a></span>
+                  <span>Email: <a href="mailto:design@cookcoinc.com" style="color: inherit;">design@cookcoinc.com</a></span>
                 </li>
                 <li>
                   <i class="fa fa-clock-o"></i>
