--- a/service.html
+++ b/service.html
@@ -368,7 +368,7 @@
       <p style="max-width: 600px; margin: 20px auto;">Contact us today to discuss your site development needs. We offer free consultations and estimates.</p>
       <div class="contact-buttons" style="margin-top: 30px;">
         <a href="contact.html" class="main-btn btn-1 btn-1e" style="margin-right: 15px;">Contact Us</a>
-        <a href="tel:YOUR-PHONE" class="main-btn btn-1 btn-1e">Call Now</a>
+        <a href="tel:813-719-1203" class="main-btn btn-1 btn-1e">Call Now</a>
       </div>
     </div>
 
@@ -444,11 +444,11 @@
                 </li>
                 <li>
                   <i class="fa fa-phone"></i>
-                  <span>Call Us: <a href="tel:YOUR-PHONE" style="color: inherit;">YOUR-PHONE</a></span>
+                  <span>Call Us: <a href="tel:813-719-1203" style="color: inherit;">813-719-1203</a></span>
                 </li>
                 <li>
                   <i class="fa fa-envelope-o"></i>
-                  <span>Email: <a href="mailto:info@cookconstructionco.com" style="color: inherit;">info@cookconstructionco.com</a></span>
+                  <span>Email: <a href="mailto:design@cookcoinc.com" style="color: inherit;">design@cookcoinc.com</a></span>
                 </li>
                 <li>
                   <i class="fa fa-clock-o"></i>
