--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="logo-outer">
           <div class="logo"> 
             <a href="index.html" style="text-decoration: none;"> 
-              <h1 style="color: #333; font-size: 24px; font-weight: 700; margin: 15px 0; text-transform: uppercase;">Cook Construction</h1>
+              <a href="index.html" class="logo">  <img src="images/logo.svg" style="width: 180px; height: auto; filter: brightness(100);"></a>
             </a> 
           </div>
         </div>
@@ -133,9 +133,9 @@
     <div class="row"> 
       <div class="col-md-5 col-sm-5">
         <div class="logo"> 
-          <a href="index.html" style="text-decoration: none;"> 
-            <h1 style="color: #333; font-size: 24px; font-weight: 700; margin: 15px 0; text-transform: uppercase;">Cook Construction</h1>
-          </a> 
+          
+           <a href="index.html" class="logo">  <img src="images/logo.svg" style="width: 180px; height: auto; filter: brightness(100);"></a>
+        
         </div>
       </div>
       <div class="col-md-7 col-sm-7"> 
