--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="col-md-5 col-sm-5">
         <div class="logo"> 
           
-           <a href="index.html" class="logo">  <img src="images/logo.svg" style="width: 180px; height: auto; filter: brightness(100);"></a>
+           <a href="index.html" class="logo">  <img src="images/logo.svg" style="width: 180px; height: auto;"></a>
         
         </div>
       </div>
