--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="logo-outer">
           <div class="logo"> 
             <a href="index.html" style="text-decoration: none;"> 
-              <a href="index.html" class="logo">  <img src="images/logo.svg" style="width: 180px; height: auto; filter: brightness(100);"></a>
+              <a href="index.html" class="logo">  <img src="images/logo.svg" style="width: 180px; height: auto;"></a>
             </a> 
           </div>
         </div>
