--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,7 @@
             <div class="col-md-4 col-sm-12">
               <div class="logo-outer">
                 <div class="logo"> 
-                  <a href="index.html" style="text-decoration: none;"> 
-                    <h2 style="color: #333; font-weight: 700; margin: 15px 0;">Cook Construction</h2>
-                  </a> 
+                  <a href="index.html" class="logo">  <img src="images/logo.svg" style="width: 180px; height: auto;"></a>
                 </div>
               </div>
             </div>
@@ -94,9 +92,7 @@
           <div class="row"> 
             <div class="col-md-4 col-sm-5">
               <div class="logo"> 
-                <a href="index.html" style="text-decoration: none;">
-                  <h2 style="color: #333; font-weight: 700; margin: 15px 0;">Cook Construction</h2>
-                </a> 
+                <a href="index.html" class="logo">  <img src="images/logo.svg" style="width: 180px; height: auto;"></a>
               </div>
             </div>
             <div class="col-md-8 col-sm-7"> 
